--- a/index.html
+++ b/index.html
@@ -1158,11 +1158,13 @@
 						<!--Footer Column-->
 						<div class="footer-column col-xl-3 col-lg-4">
 							<div class="footer-widget about-widget">
-								<h5 class="widget-title">Contact</h5>
-								<div class="text">66 Road Broklyn Street, 600 <br>New York, USA</div>
+								<h5 class="widget-title">Offices</h5>
+								<div class="text">Aim Britz Study Abroad 323 Annas Arcade, Trivandrum , 695001</div>
+								<div class="text">Aim Britz Study Abroad 3rd floor, BIFA Towers, Koonamthai, Edappaly, Kochi</div>
+								<div class="text">Aim Britz Study Abroad 43 High Street, London, UK</div>
 								<ul class="contact-info">
-									<li><i class="fa fa-envelope"></i> <a href="mailto:needhelp@potisen.com">needhelp@company.com</a><br></li>
-									<li><i class="fa fa-phone-square"></i> <a href="tel:+926668880000">+92 666 888 0000</a><br>
+									<li><i class="fa fa-envelope"></i> <a href="mailto:needhelp@potisen.com">info@aimbritz.com</a><br></li>
+									<li><i class="fa fa-phone-square"></i> <a href="tel:+919747277233">+447417391291 +919747277233 +918877889942</a><br>
 									</li>
 								</ul>
 							</div>
