updates video section

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 				<div class="auto-container">
 					<div class="sec-title text-center">
 						<span class="sub-title">Countries we offer</span>
-						<h2>Country of study</h2>
+						<h2>Premier Academic Hubs</h2>
 					</div>
 					<!--  Countries Carousel -->
 					<div class="row">
@@ -480,22 +480,22 @@
 		</section>
 		<!--End Countries Section -->
 		<!-- Call to Action Two -->
-		<section class="call-to-action-two pull-up" style="background-image: url(./images/background/4.jpg)">
+		<section class="call-to-action-two pull-up" style="background-image: url(./images/background/-PJVYsw8jlA-HD.jpg)">
 			<div class="auto-container">
 				<div class="row">
 					<div class="col-lg-8">
 						<div class="title-box">
-							<h2 class="title">We Counselling Students <br>to Get Study Visa</h2>
-							<a href="page-about.html" class="theme-btn btn-style-one light"><span class="btn-title">Explore now</span></a>
+							<!-- <h2 class="title">We Counselling Students <br>to Get Study Visa</h2> -->
+							<a href="https://www.youtube.com/@AimbritzStudyAbroad/featured" class="theme-btn btn-style-one light"><span class="btn-title">Watch now</span></a>
 						</div>
 					</div>
 					<div class="col-lg-4">
 						<div class="video-box">
 							<div class="inner">
-								<a href="https://www.youtube.com/watch?v=Fvae8nxzVz4" class="play-now-two alternate lightbox-image"><i class="icon fa fa-play"></i></a>
+								<a href="https://youtu.be/-PJVYsw8jlA?si=qyCPEqXsqKVvZuJd" class="play-now-two alternate lightbox-image"><i class="icon fa fa-play"></i></a>
 								<img src="images/icons/icon-arrow.png" alt="" class="arrow">
 								<h4 class="title style-font">Play Video</h4>
-								<span class="sub-title">Watch training videos</span>
+								<span class="sub-title">Watch videos</span>
 							</div>
 						</div>
 					</div>
@@ -1158,7 +1158,7 @@
 						<!--Footer Column-->
 						<div class="footer-column col-xl-3 col-lg-4">
 							<div class="footer-widget about-widget">
-								<h5 class="widget-title">Offices</h5>
+								<h5 class="widget-title">Our Offices</h5>
 								<div class="text">Aim Britz Study Abroad 323 Annas Arcade, Trivandrum , 695001</div>
 								<div class="text">Aim Britz Study Abroad 3rd floor, BIFA Towers, Koonamthai, Edappaly, Kochi</div>
 								<div class="text">Aim Britz Study Abroad 43 High Street, London, UK</div>
