updates what do we oofer

--- a/index-4.html
+++ b/index-4.html
@@ -79,12 +79,12 @@
 								<ul>
 									<li><a href="index.html">Home page 01</a></li>
 									<li><a href="index-2.html">Home page 02</a></li>
-									<li><a href="index-3.html">Home page 03</a></li>
+									<li><a href="index-4.html">Home page 03</a></li>
 									<li class="dropdown"><a href="#">Single</a>
 										<ul>
 											<li><a href="index-1-single.html">Home Single 1</a></li>
 											<li><a href="index-2-single.html">Home Single 2</a></li>
-											<li><a href="index-3-single.html">Home Single 3</a></li>
+											<li><a href="index-4-single.html">Home Single 3</a></li>
 										</ul>
 									</li>
 									<li class="dropdown"><a href="#">Boxed</a>
@@ -102,7 +102,7 @@
 										<ul>
 											<li><a href="index.html">Header Style One</a></li>
 											<li><a href="index-2.html">Header Style Two</a></li>
-											<li><a href="index-3.html">Header Style three</a></li>
+											<li><a href="index-4.html">Header Style three</a></li>
 										</ul>
 									</li>
 								</ul>
@@ -665,71 +665,69 @@
 	</section>
 	<!--End Countries Section -->
 
-	<!-- Services Section -->
-	<section class="services-section pt-0">
+	<!-- Services Section Two -->
+	<section class="services-section-two">
 		<div class="anim-icons">
-			<span class="icon icon-object-2"></span>
 			<span class="icon icon-object-3"></span>
 		</div>
 		<div class="auto-container">
-			<div class="sec-title">
-				<div class="row">
-					<div class="col-lg-7">
-						<span class="sub-title">What do we offer</span>
-						<h2>Outstanding Immigration <br>Visa Services.</h2>
-					</div>
-					<div class="col-lg-5">
-						<div class="text">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem is simply free text quis bibendum.</div>
-					</div>
-				</div>
+			<div class="sec-title text-center">
+				<span class="sub-title">What do we offer</span>
+				<h2>Our Services</h2>
 			</div>
-
 			<div class="row">
-				<!-- Service Block -->
-				<div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+				<!-- Service Block Two  -->
+				<div class="service-block-two col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
 					<div class="inner-box">
 						<div class="image-box">
-							<figure class="image"><a href="page-service-details.html"><img src="https://via.placeholder.com/370x185" alt=""></a></figure>
+							<figure class="image"><a href="page-service-details.html"><img src="images/background/OIG.mHOHLNicSH.jpeg" alt=""></a></figure>
 							<div class="icon-box"><i class="icon fa fa-graduation-cap"></i></div>
-						</div>
-						<div class="content-box">
-							<h5 class="title"><a href="page-service-details.html">Student Visa</a></h5>
-							<div class="text">Fusce pretium sem ism the eget mattis. Nam hendrerit elit vel urna fermentum congue.</div>
-							<a href="page-service-details.html" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
+							<div class="content-box">
+								<h5 class="title"><a href="page-service-details.html">Student Visa</a></h5>
+								<div class="text">Our knowledgeable advisors help students select a course of study that best fits their financial and academic circumstances.</div>
+							</div>
 						</div>
 					</div>
 				</div>
-
-				<!-- Service Block -->
-				<div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+				<!-- Service Block Two  -->
+				<div class="service-block-two col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
 					<div class="inner-box">
 						<div class="image-box">
-							<figure class="image"><a href="page-service-details.html"><img src="https://via.placeholder.com/370x185" alt=""></a></figure>
-							<div class="icon-box"><i class="icon fa fa-school"></i></div>
-						</div>
-						<div class="content-box">
-							<h5 class="title"><a href="page-service-details.html">Family Visa</a></h5>
-							<div class="text">Fusce pretium sem ism the eget mattis. Nam hendrerit elit vel urna fermentum congue.</div>
-							<a href="page-service-details.html" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
+							<figure class="image"><a href="page-service-details.html"><img src="https://via.placeholder.com/270x279" alt=""></a></figure>
+							<div class="icon-box"><i class="icon fa fa-users"></i></div>
+							<div class="content-box">
+								<h5 class="title"><a href="page-service-details.html">Family Visa</a></h5>
+								<div class="text">There are many lipsum of passages of available but the have in that not some.</div>
+							</div>
 						</div>
 					</div>
 				</div>
-
-				<!-- Service Block -->
-				<div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+				<!-- Service Block Two  -->
+				<div class="service-block-two col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
 					<div class="inner-box">
 						<div class="image-box">
-							<figure class="image"><a href="page-service-details.html"><img src="https://via.placeholder.com/370x185" alt=""></a></figure>
-							<div class="icon-box"><i class="icon fa fa-school"></i></div>
-						</div>
-						<div class="content-box">
-							<h5 class="title"><a href="page-service-details.html">Tourist Visa</a></h5>
-							<div class="text">Fusce pretium sem ism the eget mattis. Nam hendrerit elit vel urna fermentum congue.</div>
-							<a href="page-service-details.html" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
+							<figure class="image"><a href="page-service-details.html"><img src="https://via.placeholder.com/270x279" alt=""></a></figure>
+							<div class="icon-box"><i class="icon fa fa-camera"></i></div>
+							<div class="content-box">
+								<h5 class="title"><a href="page-service-details.html">Tourist Visa</a></h5>
+								<div class="text">There are many lipsum of passages of available but the have in that not some.</div>
+							</div>
 						</div>
 					</div>
 				</div>
-
+				<!-- Service Block Two -->
+				<div class="service-block-two col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
+					<div class="inner-box">
+						<div class="image-box">
+							<figure class="image"><a href="page-service-details.html"><img src="https://via.placeholder.com/270x279" alt=""></a></figure>
+							<div class="icon-box"><i class="icon fa fa-home"></i></div>
+							<div class="content-box">
+								<h5 class="title"><a href="page-service-details.html">Resident Visa</a></h5>
+								<div class="text">There are many lipsum of passages of available but the have in that not some.</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
