--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 								<ul>
 									<li><a href="index.html">Home page 01</a></li>
 									<li><a href="index-2.html">Home page 02</a></li>
-									<li><a href="index-3.html">Home page 03</a></li>
+									<li><a href="index-4.html">Home page 03</a></li>
 									<li class="dropdown"><a href="#">Single</a>
 										<ul>
 											<li><a href="index-1-single.html">Home Single 1</a></li>
 											<li><a href="index-2-single.html">Home Single 2</a></li>
-											<li><a href="index-3-single.html">Home Single 3</a></li>
+											<li><a href="index-4-single.html">Home Single 3</a></li>
 										</ul>
 									</li>
 									<li class="dropdown"><a href="#">Boxed</a>
@@ -59,7 +59,7 @@
 										<ul>
 											<li><a href="index.html">Header Style One</a></li>
 											<li><a href="index-2.html">Header Style Two</a></li>
-											<li><a href="index-3.html">Header Style three</a></li>
+											<li><a href="index-4.html">Header Style three</a></li>
 										</ul>
 									</li>
 								</ul>
@@ -503,73 +503,234 @@
 			</div>
 		</section>
 		<!-- End Call to Action -->
-		<!-- Services Section Two -->
-		<section class="services-section-two">
-			<div class="anim-icons">
-				<span class="icon icon-object-3"></span>
-			</div>
-			<div class="auto-container">
-				<div class="sec-title text-center">
-					<span class="sub-title">What do we offer</span>
-					<h2>Outstanding Immigration <br>Visa Services.</h2>
-				</div>
+		<!-- Services Section -->
+	<section class="services-section-two">
+		<div class="anim-icons">
+			<span class="icon icon-object-2"></span>
+			<span class="icon icon-object-3"></span>
+		</div>
+		<div class="auto-container">
+			<div class="sec-title">
 				<div class="row">
-					<!-- Service Block Two  -->
-					<div class="service-block-two col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
-						<div class="inner-box">
-							<div class="image-box">
-								<figure class="image"><a href="page-service-details.html"><img src="https://via.placeholder.com/270x279" alt=""></a></figure>
-								<div class="icon-box"><i class="icon fa fa-graduation-cap"></i></div>
-								<div class="content-box">
-									<h5 class="title"><a href="page-service-details.html">Student Visa</a></h5>
-									<div class="text">There are many lipsum of passages of available but the have in that not some.</div>
-								</div>
-							</div>
-						</div>
+					<div class="col-lg-7">
+						<span class="sub-title">What do we offer</span>
+						<h2>Outstanding Immigration <br>Visa Services.</h2>
 					</div>
-					<!-- Service Block Two  -->
-					<div class="service-block-two col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
-						<div class="inner-box">
-							<div class="image-box">
-								<figure class="image"><a href="page-service-details.html"><img src="https://via.placeholder.com/270x279" alt=""></a></figure>
-								<div class="icon-box"><i class="icon fa fa-users"></i></div>
-								<div class="content-box">
-									<h5 class="title"><a href="page-service-details.html">Family Visa</a></h5>
-									<div class="text">There are many lipsum of passages of available but the have in that not some.</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- Service Block Two  -->
-					<div class="service-block-two col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
-						<div class="inner-box">
-							<div class="image-box">
-								<figure class="image"><a href="page-service-details.html"><img src="https://via.placeholder.com/270x279" alt=""></a></figure>
-								<div class="icon-box"><i class="icon fa fa-camera"></i></div>
-								<div class="content-box">
-									<h5 class="title"><a href="page-service-details.html">Tourist Visa</a></h5>
-									<div class="text">There are many lipsum of passages of available but the have in that not some.</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- Service Block Two -->
-					<div class="service-block-two col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
-						<div class="inner-box">
-							<div class="image-box">
-								<figure class="image"><a href="page-service-details.html"><img src="https://via.placeholder.com/270x279" alt=""></a></figure>
-								<div class="icon-box"><i class="icon fa fa-home"></i></div>
-								<div class="content-box">
-									<h5 class="title"><a href="page-service-details.html">Resident Visa</a></h5>
-									<div class="text">There are many lipsum of passages of available but the have in that not some.</div>
-								</div>
-							</div>
-						</div>
+					<div class="col-lg-5">
+						<div class="text">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem is simply free text quis bibendum.</div>
 					</div>
 				</div>
 			</div>
-		</section>
-		<!-- End Services Section-->
+
+			<div class="row">
+				<!-- Service Block -->
+				<div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+					<div class="inner-box">
+						<div class="image-box">
+							<figure class="image"><a href="page-service-details.html"><img style="height: 230px;" src="images/background/22428594_554.jpg" alt=""></a></figure>
+							<div class="icon-box"><i class="icon fa fa-graduation-cap"></i></div>
+						</div>
+						<div class="content-box">
+							<h5 class="title"><a href="page-service-details.html">Career counselling</a></h5>
+							<div class="text">High-quality, personalised career counselling to help you create the best plan possible based on your interests.</div>
+							<a href="page-service-details.html" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<!-- Service Block -->
+				<div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+					<div class="inner-box">
+						<div class="image-box">
+							<figure class="image"><a href="page-service-details.html"><img style="height: 230px;" src="images/background/8513914_3936520.jpg" alt=""></a></figure>
+							<div class="icon-box"><i class="icon fa fa-plane-departure"></i></div>
+						</div>
+						<div class="content-box">
+							<h5 class="title"><a href="page-service-details.html">Predeparture Briefing</a></h5>
+							<div class="text">Students Succeed with Our Assistance — Connect via Phone, Whatsapp, or Skype for Journeys that Boost Confidence."</div>
+							<a href="page-service-details.html" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<!-- Service Block -->
+				<div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+					<div class="inner-box">
+						<div class="image-box">
+							<figure class="image"><a href="page-service-details.html"><img style="height: 230px;" src="images/background/26877048_Happy cartoon college or university students holding diplomas.jpg" alt=""></a></figure>
+							<div class="icon-box"><i class="icon fa fa-book"></i></div>
+						</div>
+						<div class="content-box">
+							<h5 class="title"><a href="page-service-details.html">Scholarship Guidance</a></h5>
+							<div class="text">With Special Resources, Aim Britz Methodically Leads You on a Step-by-Step Application Journey.</div>
+							<a href="page-service-details.html" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<!-- Service Block -->
+				<div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+					<div class="inner-box">
+						<div class="image-box">
+							<figure class="image"><a href="page-service-details.html"><img style="height: 230px;" src="images/background/10613452_10142.jpg" alt=""></a></figure>
+							<div class="icon-box"><i class="icon fa fa-globe"></i></div>
+						</div>
+						<div class="content-box">
+							<h5 class="title"><a href="page-service-details.html">Visa Assistance</a></h5>
+							<div class="text">Possessing strong international connections and professional guidance, Aim Britz streamlines a difficult process.</div>
+							<a href="page-service-details.html" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<!-- Service Block -->
+				<div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+					<div class="inner-box">
+						<div class="image-box">
+							<figure class="image"><a href="page-service-details.html"><img style="height: 230px;" src="images/background/4332402_18950.jpg" alt=""></a></figure>
+							<div class="icon-box"><i class="icon fa fa-landmark"></i></div>
+						</div>
+						<div class="content-box">
+							<h5 class="title"><a href="page-service-details.html">Education Loan</a></h5>
+							<div class="text">Aim Britz simplifies student loan selection, documentation, institutions, and applications.</div>
+							<a href="page-service-details.html" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<!-- Service Block -->
+				<div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+					<div class="inner-box">
+						<div class="image-box">
+							<figure class="image"><a href="page-service-details.html"><img style="height: 230px;" src="images/background/5576177_21513.jpg" alt=""></a></figure>
+							<div class="icon-box"><i class="icon fa fa-university"></i></div>
+						</div>
+						<div class="content-box">
+							<h5 class="title"><a href="page-service-details.html">Admission Guidance</a></h5>
+							<div class="text">
+								Put Your Trust in Our Experts for Tailored Admissions Guidance Based on Your Profile and Preferences</div>
+							<a href="page-service-details.html" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<!-- Service Block -->
+				<div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+					<div class="inner-box">
+						<div class="image-box">
+							<figure class="image"><a href="page-service-details.html"><img style="height: 230px;" src="images/background/6846611_27916.jpg" alt=""></a></figure>
+							<div class="icon-box"><i class="icon fa fa-university"></i></div>
+						</div>
+						<div class="content-box">
+							<h5 class="title"><a href="page-service-details.html">Free Dependent and Child Visa</a></h5>
+							<div class="text">
+								Bringing Family to the UK: Make an informed plan, go alone at first, and get a free dependent visa with our help.</div>
+							<a href="page-service-details.html" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<!-- Service Block -->
+				<div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+					<div class="inner-box">
+						<div class="image-box">
+							<figure class="image"><a href="page-service-details.html"><img style="height: 230px;" src="images/background/21684206_Passenger going through metal body scanner with luggage on belt.jpg" alt=""></a></figure>
+							<div class="icon-box"><i class="icon fa fa-school"></i></div>
+						</div>
+						<div class="content-box">
+							<h5 class="title"><a href="page-service-details.html">Airport Pickup</a></h5>
+							<div class="text">
+								Your Trusted UK Airport Drop Service – Serving All London Airports, Ensuring Comfortable and Convenient Rides.</div>
+							<a href="page-service-details.html" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<!-- Service Block -->
+				<div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+					<div class="inner-box">
+						<div class="image-box">
+							<figure class="image"><a href="page-service-details.html"><img style="height: 230px;" src="images/background/19212494_Cartoon bell boy helping female guest carry luggage.jpg" alt=""></a></figure>
+							<div class="icon-box"><i class="icon fa fa-school"></i></div>
+						</div>
+						<div class="content-box">
+							<h5 class="title"><a href="page-service-details.html">Accomodation Assist</a></h5>
+							<div class="text">
+								Excellent Housing for Foreign Students in the UK: Safe, Practical, and Wide-Ranging Selections in London and Across.</div>
+							<a href="page-service-details.html" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<!-- Service Block -->
+				<div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+					<div class="inner-box">
+						<div class="image-box">
+							<figure class="image"><a href="page-service-details.html"><img style="height: 230px;" src="images/background/6161033_2350.jpg" alt=""></a></figure>
+							<div class="icon-box"><i class="icon fa fa-school"></i></div>
+						</div>
+						<div class="content-box">
+							<h5 class="title"><a href="page-service-details.html">Partime Assist</a></h5>
+							<div class="text">
+								Discover London, Get a Part-Time Job with Arrange a Pastime Job—A World-Class City with a thriving nightlife.</div>
+							<a href="page-service-details.html" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<!-- Service Block -->
+				<div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+					<div class="inner-box">
+						<div class="image-box">
+							<figure class="image"><a href="page-service-details.html"><img style="height: 230px;" src="images/background/12291285_Startup managers presenting and analyzing sales growth chart.jpg" alt=""></a></figure>
+							<div class="icon-box"><i class="icon fa fa-school"></i></div>
+						</div>
+						<div class="content-box">
+							<h5 class="title"><a href="page-service-details.html">Financial Assist</a></h5>
+							<div class="text">
+								Financial Relief Made Accessible: The Secure and Low-Interest Finance Support Service for Short-Term Living Expenses.</div>
+							<a href="page-service-details.html" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<!-- Service Block -->
+				<div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+					<div class="inner-box">
+						<div class="image-box">
+							<figure class="image"><a href="page-service-details.html"><img style="height: 230px;" src="images/background/23306556_1911.i305.029.P.m005.c20.lawyer justice law set-09.jpg" alt=""></a></figure>
+							<div class="icon-box"><i class="icon fa fa-school"></i></div>
+						</div>
+						<div class="content-box">
+							<h5 class="title"><a href="page-service-details.html">Work Permit Conversion</a></h5>
+							<div class="text">
+								With Our Assistance, Convert to a Skilled Worker Visa - Children and Partners May Apply Separately or Concurrently.</div>
+							<a href="page-service-details.html" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
+						</div>
+					</div>
+				</div>
+
+				<!-- Service Block -->
+				<div class="service-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+					<div class="inner-box">
+						<div class="image-box">
+							<figure class="image"><a href="page-service-details.html"><img style="height: 230px;" src="images/background/dad-son-standing-counter-airport_74855-10574.jpg" alt=""></a></figure>
+							<div class="icon-box"><i class="icon fa fa-school"></i></div>
+						</div>
+						<div class="content-box">
+							<h5 class="title"><a href="page-service-details.html">PR Assist</a></h5>
+							<div class="text">
+								Obtain Permanent Residency in the UK, Only for Those Without a Natural Right to Reside There.</div>
+							<a href="page-service-details.html" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</section>
+	<!-- End Services Section-->
+		
 		<!-- Why Choose Us Three -->
 		<section class="why-choose-us-three">
 			<div class="anim-icons">
