--- a/index.html
+++ b/index.html
@@ -742,16 +742,16 @@
 					<div class="content-column col-lg-6 col-md-12">
 						<div class="inner-column wow fadeInRight">
 							<div class="sec-title">
-								<i class="sub-title">/ Why Choose Us</i>
-								<h2>Best Immigration & Visa Consultations.</h2>
-								<div class="bold-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words.</div>
-								<div class="text">You need to be sure there isn't anything embarrassing hidden in the middle of text. All the lorem generators on the Internet.</div>
+								<i class="sub-title">/ Why Aim Britz?</i>
+								<h2>Your Ultimate Study Abroad Guide</h2>
+								<div class="bold-text">Aim Britz is one of the top Study Abroad consultants in Kerala that guides and consults students all around the globe. We offer a great opportunity for students to study in UK without ILETS and with low tuition fees.</div>
+								<div class="text">Your #1 Global Education Handbook for Life-Changing Academic Experiences</div>
 							</div>
 							<ul class="list-style-three two-column">
-								<li>Nsectetur cing elit.</li>
-								<li>You’re going passage.</li>
-								<li>Suspe ndisse suscipit leo.</li>
-								<li>Lorem ipsum gen on tend.</li>
+								<li>Consultations with experts.</li>
+								<li>Excellence in Personalised Guidance.</li>
+								<li>Demonstrated Success History.</li>
+								<li>Focused on Placement in UK Universities.</li>
 							</ul>
 							<a href="page-about.html" class="theme-btn btn-style-one"><span class="btn-title">Explore now</span></a>
 						</div>
@@ -761,11 +761,11 @@
 						<div class="inner-column">
 							<div class="image-box">
 								<figure class="bg-image"><img src="https://via.placeholder.com/532x544" alt=""></figure>
-								<figure class="image"><img src="https://via.placeholder.com/570x544" alt=""></figure>
+								<figure class="image"><img src="images/background/13561931_5274708.jpg" alt=""></figure>
 								<div class="info-box">
 									<i class="icon flaticon-licensing"></i>
-									<span class="count">4,89000</span>
-									<div class="text">We Process Clients Visa’s only in 20 Days</div>
+									<span class="count">1000+</span>
+									<div class="text">We Process Student Visa’s only in 20 Days</div>
 								</div>
 							</div>
 						</div>
@@ -774,11 +774,11 @@
 				<div class="banner-box-three">
 					<div class="inner-box">
 						<div class="title-column">
-							<figure class="image"><img src="https://via.placeholder.com/240x132" alt=""></figure>
-							<h3 class="title">Skilled Visa’s in Global Immigration Sumit</h3>
+							<figure class="image"><img src="images/icons/g3.png" alt=""></figure>
+							<h3 class="title"> Asia’s First in Asia Book of Records and India Book of Records</h3>
 						</div>
 						<div class="text-column">
-							<div class="text">Lorem ipsum is are many variations of pass of norms and guide an simply free texts affective majority.</div>
+							<div class="text">Creating a Revolutionary Step in the Field of Educational Consulting and Being Listed in the Asia and India Books of Records</div>
 						</div>
 					</div>
 				</div>
@@ -794,8 +794,8 @@
 					<div class="counter-block-two col-xl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp">
 						<div class="inner">
 							<i class="icon flaticon-passport-16"></i>
-							<div class="count-box"><span class="count-text" data-speed="3000" data-stop="30">0</span>+</div>
-							<h6 class="counter-title">Visa Categories</h6>
+							<div class="count-box"><span class="count-text" data-speed="3000" data-stop="100">0</span>+</div>
+							<h6 class="counter-title">Universities & Institutes Tie-ups</h6>
 						</div>
 					</div>
 
@@ -803,8 +803,8 @@
 					<div class="counter-block-two col-xl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="300ms">
 						<div class="inner">
 							<i class="icon flaticon-group"></i>
-							<div class="count-box"><span class="count-text" data-speed="3000" data-stop="389">0</span>+</div>
-							<h6 class="counter-title">Team Members</h6>
+							<div class="count-box"><span class="count-text" data-speed="3000" data-stop="100">0</span>+</div>
+							<h6 class="counter-title">Registered students for next intake</h6>
 						</div>
 					</div>
 
@@ -812,8 +812,8 @@
 					<div class="counter-block-two col-xl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="600ms">
 						<div class="inner">
 							<i class="icon flaticon-life-insurance"></i>
-							<div class="count-box"><span class="count-text" data-speed="3000" data-stop="4.9">0</span>k</div>
-							<h6 class="counter-title">Visa Process</h6>
+							<div class="count-box"><span class="count-text" data-speed="3000" data-stop="1000">1000</span>+</div>
+							<h6 class="counter-title">Satisfied students</h6>
 						</div>
 					</div>
 
@@ -821,8 +821,8 @@
 					<div class="counter-block-two col-xl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="900ms">
 						<div class="inner">
 							<i class="icon flaticon-cooperation"></i>
-							<div class="count-box"><span class="count-text" data-speed="3000" data-stop="98">0</span>%</div>
-							<h6 class="counter-title">Success Rates</h6>
+							<div class="count-box"><span class="count-text" data-speed="3000" data-stop="5">0</span>*</div>
+							<h6 class="counter-title">Rated on social media</h6>
 						</div>
 					</div>
 				</div>
