--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@
 					<div class="title-column col-lg-4 col-md-12">
 						<div class="sec-title">
 							<span class="sub-title">Our testimonials</span>
-							<h2>What They are Talking About Company.</h2>
+							<h2>What Our Students Say.</h2>
 						</div>
 					</div>
 					<div class="testimonial-column col-lg-8 col-md-12">
@@ -1063,15 +1063,13 @@
 								<div class="testimonial-block-three">
 									<div class="inner-box">
 										<div class="image-box">
-											<figure class="image"><img src="https://via.placeholder.com/230x230" alt=""></figure>
+											<figure class="image"><img src="images/testimonials/WhatsApp-Image-2021-03-11-at-6.16.50-PM-92x92-1.jpeg" alt=""></figure>
 										</div>
 										<div class="content-box">
-											<div class="text">I was very impresed by the company service lore ipsum is simply
-												free text used by copy typing refreshing. Neque porro est qui dolorem ipsum
-												quia.</div>
+											<div class="text">Aimbritz help me out to get into my dream building</div>
 											<div class="info-box">
-												<h5 class="name">Kevin Martin</h5>
-												<span class="designation">Customers</span>
+												<h5 class="name">Aiswarya S Nair</h5>
+												<span class="designation">University of Huddersfield</span>
 											</div>
 										</div>
 									</div>
@@ -1080,15 +1078,13 @@
 								<div class="testimonial-block-three">
 									<div class="inner-box">
 										<div class="image-box">
-											<figure class="image"><img src="https://via.placeholder.com/230x230" alt=""></figure>
+											<figure class="image"><img src="images/testimonials/WhatsApp-Image-2021-03-11-at-6.16.50-PM-1-92x92-1.jpeg" alt=""></figure>
 										</div>
 										<div class="content-box">
-											<div class="text">I was very impresed by the company service lore ipsum is simply
-												free text used by copy typing refreshing. Neque porro est qui dolorem ipsum
-												quia.</div>
+											<div class="text">It was a great journey with AimBritz throughout my admission process</div>
 											<div class="info-box">
-												<h5 class="name">Aleesha Brown</h5>
-												<span class="designation">Customers</span>
+												<h5 class="name">Mohammed Ashik</h5>
+												<span class="designation">University of aTeeside</span>
 											</div>
 										</div>
 									</div>
@@ -1097,66 +1093,13 @@
 								<div class="testimonial-block-three">
 									<div class="inner-box">
 										<div class="image-box">
-											<figure class="image"><img src="https://via.placeholder.com/230x230" alt=""></figure>
+											<figure class="image"><img src="images/testimonials/WhatsApp-Image-2021-03-11-at-6.16.51-PM-92x92-1.jpeg" alt=""></figure>
 										</div>
 										<div class="content-box">
-											<div class="text">I was very impresed by the company service lore ipsum is simply
-												free text used by copy typing refreshing. Neque porro est qui dolorem ipsum
-												quia.</div>
+											<div class="text">AimBritz helped us in finding partimes and accommodation even though we are not their candidates.</div>
 											<div class="info-box">
-												<h5 class="name">Kevin Martin</h5>
-												<span class="designation">Customers</span>
-											</div>
-										</div>
-									</div>
-								</div>
-								<!-- Testimonial Block Three -->
-								<div class="testimonial-block-three">
-									<div class="inner-box">
-										<div class="image-box">
-											<figure class="image"><img src="https://via.placeholder.com/230x230" alt=""></figure>
-										</div>
-										<div class="content-box">
-											<div class="text">I was very impresed by the company service lore ipsum is simply
-												free text used by copy typing refreshing. Neque porro est qui dolorem ipsum
-												quia.</div>
-											<div class="info-box">
-												<h5 class="name">Aleesha Brown</h5>
-												<span class="designation">Customers</span>
-											</div>
-										</div>
-									</div>
-								</div>
-								<!-- Testimonial Block Three -->
-								<div class="testimonial-block-three">
-									<div class="inner-box">
-										<div class="image-box">
-											<figure class="image"><img src="https://via.placeholder.com/230x230" alt=""></figure>
-										</div>
-										<div class="content-box">
-											<div class="text">I was very impresed by the company service lore ipsum is simply
-												free text used by copy
-												typing refreshing. Neque porro est qui dolorem ipsum quia.</div>
-											<div class="info-box">
-												<h5 class="name">Kevin Martin</h5>
-												<span class="designation">Customers</span>
-											</div>
-										</div>
-									</div>
-								</div>
-								<!-- Testimonial Block Three -->
-								<div class="testimonial-block-three">
-									<div class="inner-box">
-										<div class="image-box">
-											<figure class="image"><img src="https://via.placeholder.com/230x230" alt=""></figure>
-										</div>
-										<div class="content-box">
-											<div class="text">I was very impresed by the company service lore ipsum is simply
-												free text used by copy
-												typing refreshing. Neque porro est qui dolorem ipsum quia.</div>
-											<div class="info-box">
-												<h5 class="name">Aleesha Brown</h5>
-												<span class="designation">Customers</span>
+												<h5 class="name">Aleena Ashok and friends Burnel</h5>
+												<span class="designation">UK</span>
 											</div>
 										</div>
 									</div>
