--- a/index.html
+++ b/index.html
@@ -1657,6 +1657,28 @@
                       </div>
                     </div>
                   </div>
+                  <!-- Testimonial Block Three -->
+                  <div class="testimonial-block-three">
+                    <div class="inner-box">
+                      <div class="image-box">
+                        <figure class="image">
+                          <img
+                            src="images/testimonials/WhatsApp Image 2024-02-06 at 12.05.42 PM 12.55.17 PM.jpeg"
+                            alt=""
+                          />
+                        </figure>
+                      </div>
+                      <div class="content-box">
+                        <div class="text">
+                          Completed MBA in project management at UEL. Excellent support from AimBritz team. Highly recommend for educational goals.
+                        </div>
+                        <div class="info-box">
+                          <h5 class="name">OLEENA JOS CHIRAMMEL</h5>
+                          <span class="designation">UK</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
