adds team page2

--- a/page-team.html
+++ b/page-team.html
@@ -36,7 +36,11 @@
           <div class="logo-box">
             <div class="logo">
               <a href="index.html"
-                ><img src="images/aimbritz-logo.png" width="150px" alt="" title="Tronis"
+                ><img
+                  src="images/aimbritz-logo.png"
+                  width="150px"
+                  alt=""
+                  title="Tronis"
               /></a>
             </div>
           </div>
@@ -454,6 +458,43 @@
               </div>
             </div>
           </div>
+		   <!--Team Details Start-->
+		   <br></br>
+		   <br></br>
+			<div class="container pb-100">
+			  <div class="team-details__top pb-70">
+				<div class="row">
+				  <div class="col-xl-6 col-lg-6">
+					<div class="team-details__top-left">
+					  <div class="team-details__top-img">
+						<img src="images/team/image-005.png" alt="" />
+						<div class="team-details__big-text"></div>
+					  </div>
+					</div>
+				  </div>
+				  <div class="col-xl-6 col-lg-6">
+					<div class="team-details__top-right">
+					  <div class="team-details__top-content">
+						<h3 class="team-details__top-name">Al Ameen M Ali</h3>
+						<p class="team-details__top-title">Founder/CEO</p>
+						<div class="team-details__social">
+						  <a href="#"><i class="fab fa-twitter"></i></a>
+						  <a href="#"><i class="fab fa-facebook"></i></a>
+						  <a href="#"><i class="fab fa-pinterest-p"></i></a>
+						  <a href="#"><i class="fab fa-instagram"></i></a>
+						</div>
+						<p class="team-details__top-text-1">
+							"I don't want anyone going through the struggle I faced as an
+							international student at Britian. I help and assist my fellow
+							aspirant to pursue their studies without any pain. This is not
+							mere a word. it's my promise to who trust AIM BRITZ"
+						</p>
+					  </div>
+					</div>
+				  </div>
+				</div>
+			  </div>
+		  <!--Team Details End-->
         </div>
       </section>
       <!-- End Team Section -->
