updates index page

--- a/index.html
+++ b/index.html
@@ -418,24 +418,10 @@
                   <span class="sub-title">About our company</span>
                   <h2>Welcome to Aim Britz</h2>
                   <div class="text">
-                    Aim Britz is a prestigious name for global education in
-                    India with long periods of strong inside and out experience.
-                    With experience we have built up a rich comprehension of
-                    what student’s desire, whenever looking for higher education
-                    openings abroad. We, UK Study Abroad Consultants in Kerala
-                    offer first-class links to some of the finest overseas
-                    colleges and universities. Our key point is to give the best
-                    education opportunities abroad to Indian students. Our main
-                    strength is our experts who are graduated from UK
-                    Universities, as an educational consultancy in the UK, Aim
-                    Britz has dedicated approach towards the welfare of the
-                    students and always acts as a bridge between the institutes
-                    and prospective students. We offer a great opportunity for
-                    students to study with scholarships in UK without IELTS and
-                    low tuition fees.
+                    Leading education consultant Aim Britz, with years of experience, provides unmatched knowledge and insights. Our committed team, made up of experts with UK educations, makes it easier to get into prestigious international colleges. We put the needs of our students first, giving them access to top-notch international education options with affordable tuition and scholarships. Our Kerala-based UK study abroad consultants serve as a liaison between students and universities, guaranteeing a smooth transfer to tertiary education.
                   </div>
                 </div>
-                <div class="info-box">
+                <!-- <div class="info-box">
                   <div class="inner">
                     <i class="icon fa fa-check"></i>
                     <h5 class="title">The Best Visa Services</h5>
@@ -444,14 +430,14 @@
                       available, but the majority have suffered.
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <div class="btn-box">
                   <a href="tel:+92(8800)9806" class="info-btn">
                     <i class="icon fa fa-phone"></i>
                     <small>Call Anytime</small> +91 9747277233
                   </a>
                   <a href="page-about.html" class="theme-btn btn-style-one"
-                    ><span class="btn-title">Explore now</span></a
+                    ><span class="btn-title">Contact us</span></a
                   >
                 </div>
               </div>
@@ -460,10 +446,7 @@
             <div class="image-column col-lg-6 col-md-12">
               <div class="inner-column wow fadeInLeft">
                 <figure class="image overlay-anim wow fadeInUp">
-                  <img src="https://via.placeholder.com/712x492" alt="" />
-                </figure>
-                <figure class="stemp bounce-y">
-                  <img src="images/resource/stemp-3.png" alt="" />
+                  <img src="images/background/front-view-male-student-striped-shirt-wearing-yellow-backpack-holding-round-little-globe-blue-wall.jpg" alt="" />
                 </figure>
                 <div class="experience">
                   <div class="inner">
