updates nav footer

--- a/page-about.html
+++ b/page-about.html
@@ -49,112 +49,14 @@
           <div class="nav-outer">
             <nav class="nav main-menu">
               <ul class="navigation">
-                <li class="current dropdown">
+                <li>
                   <a href="index.html">Home</a>
-                  <ul>
-                    <li><a href="index.html">Home page 01</a></li>
-                    <li><a href="index-2.html">Home page 02</a></li>
-                    <li><a href="index-4.html">Home page 03</a></li>
-                    <li class="dropdown">
-                      <a href="#">Single</a>
-                      <ul>
-                        <li><a href="index-1-single.html">Home Single 1</a></li>
-                        <li><a href="index-2-single.html">Home Single 2</a></li>
-                        <li><a href="index-4-single.html">Home Single 3</a></li>
-                      </ul>
-                    </li>
-                    <li class="dropdown">
-                      <a href="#">Boxed</a>
-                      <ul>
-                        <li><a href="index-1-boxed.html">Home Boxed 1</a></li>
-                        <li><a href="index-2-boxed.html">Home Boxed 2</a></li>
-                      </ul>
-                    </li>
-                    <li class="dropdown">
-                      <a href="#">RTL</a>
-                      <ul>
-                        <li><a href="index-1-rtl.html">Home RTL 1</a></li>
-                      </ul>
-                    </li>
-                    <li class="dropdown">
-                      <a href="#">Header Styles</a>
-                      <ul>
-                        <li><a href="index.html">Header Style One</a></li>
-                        <li><a href="index-2.html">Header Style Two</a></li>
-                        <li><a href="index-4.html">Header Style three</a></li>
-                      </ul>
-                    </li>
-                  </ul>
                 </li>
-                <li class="dropdown">
-                  <a href="#">Pages</a>
-                  <ul>
-                    <li><a href="page-about.html">About</a></li>
-                    <li class="dropdown">
-                      <a href="#">Country</a>
-                      <ul>
-                        <li><a href="page-country.html">Country grid</a></li>
-                        <li>
-                          <a href="page-country-details.html"
-                            >Country Details</a
-                          >
-                        </li>
-                      </ul>
-                    </li>
-                    <li class="dropdown">
-                      <a href="#">Team</a>
-                      <ul>
-                        <li><a href="page-team.html">Team List</a></li>
-                        <li>
-                          <a href="page-team-details.html">Team Details</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li><a href="page-testimonial.html">Testimonial</a></li>
-                    <li><a href="page-FAQ.html">FAQ</a></li>
-                    <li><a href="page-404.html">Page 404</a></li>
-                  </ul>
+                <li>
+                  <a class="current" href="page-about.html">About Us</a>
                 </li>
-                <li class="dropdown">
-                  <a href="#">Coaching</a>
-                  <ul>
-                    <li><a href="page-course.html">Coaching grid</a></li>
-                    <li>
-                      <a href="page-course-details.html">Coaching Details</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="#">Visa</a>
-                  <ul>
-                    <li><a href="page-service.html">Visa grid</a></li>
-                    <li>
-                      <a href="page-service-details.html">Visa Details</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="#">Shop</a>
-                  <ul>
-                    <li><a href="shop-products.html">Products</a></li>
-                    <li>
-                      <a href="shop-products-sidebar.html"
-                        >Products with Sidebar</a
-                      >
-                    </li>
-                    <li>
-                      <a href="shop-product-details.html">Product Details</a>
-                    </li>
-                    <li><a href="shop-cart.html">Cart</a></li>
-                    <li><a href="shop-checkout.html">Checkout</a></li>
-                  </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="#">News</a>
-                  <ul>
-                    <li><a href="news-grid.html">News Grid</a></li>
-                    <li><a href="news-details.html">News Details</a></li>
-                  </ul>
+                <li>
+                  <a href="page-team.html">Our Team</a>
                 </li>
                 <li><a href="page-contact.html">Contact</a></li>
               </ul>
@@ -443,20 +345,22 @@
               <!--Footer Column-->
               <div class="footer-column col-xl-3 col-lg-4">
                 <div class="footer-widget about-widget">
-                  <h5 class="widget-title">Contact</h5>
+                  <h5 class="widget-title">Our Offices</h5>
                   <div class="text">
-                    66 Road Broklyn Street, 600 <br />New York, USA
+                    Aim Britz Study Abroad 323 Annas Arcade, Trivandrum , 695001, +919747277233
+                  </div>
+                  <div class="text">
+                    Aim Britz Study Abroad 3rd floor, BIFA Towers, Koonamthai,
+                    Edappaly, Kochi, +918877889942
+                  </div>
+                  <div class="text">
+                    Aim Britz Study Abroad 43 High Street, London, UK, +447417391291
                   </div>
                   <ul class="contact-info">
                     <li>
                       <i class="fa fa-envelope"></i>
-                      <a href="mailto:needhelp@potisen.com"
-                        >needhelp@company.com</a
+                      <a href="mailto:needhelp@potisen.com">info@aimbritz.com</a
                       ><br />
-                    </li>
-                    <li>
-                      <i class="fa fa-phone-square"></i>
-                      <a href="tel:+926668880000">+92 666 888 0000</a><br />
                     </li>
                   </ul>
                 </div>
@@ -469,32 +373,25 @@
                     <div class="col-lg-4 col-md-4 col-sm-12">
                       <h5 class="widget-title">Explore</h5>
                       <ul class="user-links">
-                        <li><a href="#">About Company</a></li>
-                        <li><a href="#">Meet the Team</a></li>
-                        <li><a href="#">News & Media</a></li>
-                        <li><a href="#">Our Projects</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="/page-about.html">About Company</a></li>
+                        <li><a href="/page-team.html">Meet the Team</a></li>
+                        <li><a href="/page-contact.html">Contact</a></li>
                       </ul>
                     </div>
-
                     <div class="col-lg-4 col-md-4 col-sm-12">
                       <h5 class="widget-title">Visa</h5>
                       <ul class="user-links">
                         <li><a href="#">Students Visa</a></li>
-                        <li><a href="#">Business Visa</a></li>
-                        <li><a href="#">Family Visa</a></li>
+                        <li><a href="#">Spouse Visa</a></li>
                         <li><a href="#">Travel Visa</a></li>
-                        <li><a href="#">Work Visa</a></li>
                       </ul>
                     </div>
-
                     <div class="col-lg-4 col-md-4 col-sm-12">
                       <h5 class="widget-title">Services</h5>
                       <ul class="user-links">
                         <li><a href="#">PR Applicants</a></li>
                         <li><a href="#">Visa Consultancy</a></li>
                         <li><a href="#">Travel Insurance</a></li>
-                        <li><a href="#">Work Permits</a></li>
                         <li><a href="#">Abroad Study</a></li>
                       </ul>
                     </div>
