updates side nav bar

--- a/page-about.html
+++ b/page-about.html
@@ -60,7 +60,7 @@
           <a href="tel:+92(8800)9806" class="info-btn">
             <i class="icon fa fa-phone"></i>
             <small>Call Anytime</small><br />
-            + 88 ( 9800 ) 6802
+            +91 8877889942
           </a>
 
           <div class="ui-btn-outer">
@@ -99,7 +99,7 @@
               <div class="contact-info-box">
                 <i class="icon lnr-icon-phone-handset"></i>
                 <span class="title">Call Now</span>
-                <a href="tel:+92880098670">+92 (8800) - 98670</a>
+                <a href="tel:+918877889942">+91 8877889942</a>
               </div>
             </li>
             <li>
@@ -107,7 +107,7 @@
               <div class="contact-info-box">
                 <span class="icon lnr-icon-envelope1"></span>
                 <span class="title">Send Email</span>
-                <a href="mailto:help@company.com">help@company.com</a>
+                <a href="mailto:info@aimbritz.com">info@aimbritz.com</a>
               </div>
             </li>
             <li>
