--- a/page-team.html
+++ b/page-team.html
@@ -68,7 +68,7 @@
             <a href="tel:+92(8800)9806" class="info-btn">
               <i class="icon fa fa-phone"></i>
               <small>Call Anytime</small><br />
-              + 88 ( 9800 ) 6802
+              +91 8877889942
             </a>
 
             <div class="ui-btn-outer">
@@ -94,7 +94,7 @@
             <div class="upper-box">
               <div class="nav-logo">
                 <a href="index.html"
-                  ><img src="images/logo.png" alt="" title=""
+                  ><img src="images/aimbritz-logo.png" alt="" title=""
                 /></a>
               </div>
               <div class="close-btn"><i class="icon fa fa-times"></i></div>
@@ -109,7 +109,7 @@
                 <div class="contact-info-box">
                   <i class="icon lnr-icon-phone-handset"></i>
                   <span class="title">Call Now</span>
-                  <a href="tel:+92880098670">+92 (8800) - 98670</a>
+                  <a href="tel:+92880098670">+91 8877889942</a>
                 </div>
               </li>
               <li>
@@ -117,7 +117,7 @@
                 <div class="contact-info-box">
                   <span class="icon lnr-icon-envelope1"></span>
                   <span class="title">Send Email</span>
-                  <a href="mailto:help@company.com">help@company.com</a>
+                  <a href="mailto:info@aimbritz.com">info@aimbritz.com</a>
                 </div>
               </li>
               <li>
