--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <nav class="menu-box">
           <div class="upper-box">
             <div class="nav-logo">
-              <a href="index.html"><img src="images/logo.png" alt="" title="" /></a>
+              <a href="index.html"><img src="images/aimbritz-logo.png" alt="" title="" /></a>
             </div>
             <div class="close-btn"><i class="icon fa fa-times"></i></div>
           </div>
@@ -94,7 +94,7 @@
               <div class="contact-info-box">
                 <i class="icon lnr-icon-phone-handset"></i>
                 <span class="title">Call Now</span>
-                <a href="tel:+92880098670">+92 (8800) - 98670</a>
+                <a href="tel:+918877889942">+91 8877889942</a>
               </div>
             </li>
             <li>
@@ -102,7 +102,7 @@
               <div class="contact-info-box">
                 <span class="icon lnr-icon-envelope1"></span>
                 <span class="title">Send Email</span>
-                <a href="mailto:help@company.com">help@company.com</a>
+                <a href="mailto:info@aimbritz.com">info@aimbritz.com</a>
               </div>
             </li>
             <li>
